fixed vertical alignment of page

--- a/frontend/src/app/profile-page/profile-page/profile-page.component.css
+++ b/frontend/src/app/profile-page/profile-page/profile-page.component.css
@@ -21,12 +21,15 @@
     color: #f7f7d6;
     border-radius: 8px;
 }
+
 .pagination-info 
 {
   font-size       : 1rem;
   font-weight     : bold;
   margin-right    : 20px;
   color           : #f8f9fa;
+  display         : flex;
+  align-items     : center;
 }
 
 .pagination-controls 
@@ -66,6 +69,6 @@
 
 .pagination-info p 
 {
-  margin : 0;
-  color  : #f8f9fa;
+  margin: 0;
+  color : #f8f9fa;
 }
